# award-winner-design

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .releaserc.json  .vercelignore  ANTI_FRAGILITY_ANALYSIS_AND_MEASURES.md  ARCHITECTURE.md  BIZRA BRAND idintiy.html  BIZRA-Activate.bat  BIZRA_ECOSYSTEM_VALIDATION_REPORT.md  BIZRA_GENESIS_ACTIVATION_REPORT.md  BIZRA_NODE_0_BLUEPRINT.md  BIZRA_OMEGA_4_CORPUS_SYNTHESIS.md  BIZRA_PROOF_PROTOCOL_FRAMEWORK.md  BIZRA_PROOF_PROTOCOL_FRAMEWORK_v2.md  BIZRA_SYSTEM_ANALYSIS_SAPE.md  CHANGELOG.md  COMPLETE_SYSTEM_HIERARCHY.md  COMPREHENSIVE_ANTI_FRAGILITY_SUMMARY.md  COMPREHENSIVE_FINAL_SYNTHESIS_REPORT.md  COMPREHENSIVE_GAP_ANALYSIS_REPORT.md  COMPREHENSIVE_LENS_VISUALIZATION.md  COMPREHENSIVE_SYSTEM_OPTIMIZATION_AUDIT.md  COMPREHENSIVE_SYSTEM_OPTIMIZATION_AUDIT_REPORT.md  COMPREHENSIVE_SYSTEM_OPTIMIZATION_FRAMEWORK.md  CONTRIBUTING.md  DATA_INGESTION_PROTOCOL.md  Dockerfile  Dockerfile.dev  ELITE-DEVOPS-SUMMARY.md  ELITE_DEVOPS_BLUEPRINT.md  ELITE_DEVOPS_IMPLEMENTATION_SUMMARY.md  ELITE_FULLSTACK_PROJECT_BLUEPRINT.md  ELITE_MASTERPIECE_BLUEPRINT.md  FRONTEND_ARCHITECTURE.md  GOLDEN_PRINCIPLES_APPLICATION_PLAN.md  GOT_FRAMEWORK_ANALYSIS.md  GOT_FRAMEWORK_DAG.md  (+38 more)
.bizra-kernel/: BIZRA-Activate.bat  QUICK-REFERENCE.md  README.md  SYSTEM-OVERVIEW.md  core-context.json  hooks.yaml  init-kernel.bat  kernel-entry.ts  load-kernel.py  memory.json  standards.yaml  start_genesis_zero.ps1  tools.yaml
.bizra-kernel/BIZRA-Thermal-Synthesis/: Cargo.toml
.bizra-kernel/BIZRA-Thermal-Synthesis/synthesis_orchestrator/: Cargo.toml
.bizra-kernel/BIZRA-Thermal-Synthesis/synthesis_orchestrator/src/: lib.rs  thermal_router.rs  types.rs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.husky/: pre-commit
.proof-forge/: EVIDENCE_INDEX.json
BIZRA-Unified-Windows-Installer/: app.js  config-generator.js  index.html  installer-builder.js  style.css  system-scanner.js
app/: globals.css  layout.tsx  page.tsx  public-boundary.module.css  sitemap.ts
components/: bizra-logo-animated.tsx  citadel-optimized.tsx  citadel.tsx  cosmic-background.tsx  footer.tsx  genesis-dashboard.tsx  genesis-story.tsx  glass-interface.tsx  hero-section.tsx  hero.tsx  loading-screen.tsx  metrics-grid.tsx  nav-dock.tsx  sacred-geometry-interface.tsx  sacred-geometry.tsx  sovereignty-admission.tsx
docs/: BIZRA_LEAN_CORE.md  cycle-2-acceptance-checklist.md  cycle-2-admissibility-spec.md  dema-console-v1-spec.md  dema-rust-json-bridge-contract.md
hooks/: use-motion-preference.ts  use-node-health.ts  use-sovereign-api.ts  use-sovereign-registration.ts  use-wallet.ts
lib/: ai-orchestrator.ts  constitutional-constants.ts  economic.ts  sovereign-client.ts  use-sovereign-stats.ts
public/: architecture-atlas.html  (+2 more)
(+274 files in other folders)
