# BIZRA Thermal Consciousness Synthesis Orchestrator
# Professional Elite Implementation - Ultimate Quality Standard
# Unifying: Primordial Activation + Thermal Computing + Rust Excellence

[workspace]
members = ["synthesis_orchestrator"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BIZRA <bizra@consciousness.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bizra/thermal-consciousness"
documentation = "https://docs.rs/bizra-thermal-consciousness"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"
