[package]
name = "synthesis_orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "BIZRA Thermal Consciousness Synthesis Orchestrator - Professional Elite Implementation"
readme = "README.md"
keywords = ["ai", "consciousness", "thermal-computing", "orchestration", "synthesis"]
categories = ["algorithms", "science", "simulation"]

[features]
default = ["simd"]
simd = ["dep:simd-json"]
avx2 = []
avx512 = []
io-uring = ["dep:io-uring"]
full = ["simd", "avx2"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time"] }
thiserror = "1.0"
cfg-if = "1.0"

# Data structures
hashbrown = "0.14"
bytes = "1.5"

# SIMD and performance (feature-gated)
simd-json = { version = "0.13", optional = true }

# Random sampling and distributions
rand = "0.8"
rand_distr = "0.4"

# Cryptography (Trust layer)
ring = "0.17"
blake3 = "1.5"

# Async and concurrency
crossbeam-channel = "0.5"

# Metrics and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
approx = "0.5"

[[bench]]
name = "thermal_routing"
harness = false

[[bench]]
name = "thermal_consensus"
harness = false

[[bench]]
name = "json_parsing"
harness = false

[lib]
name = "synthesis_orchestrator"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
